More rpm build updates to build on all platforms
Handle spcial cases of dependency naming and special versions of
setuptools that don’t support data_files.

--- a/setup.cfg
+++ b/setup.cfg
@@ -63,10 +63,6 @@ pympress =
 	share/pixmaps/*.png
 	share/locale/*/LC_MESSAGES/pympress.mo
 
-[options.data_files]
-share/pixmaps/ = pympress/share/pixmaps/pympress.png
-share/applications/ = pympress/share/applications/pympress.desktop
-
 [options.entry_points]
 gui_scripts =
 	pympress = pympress.__main__:main
@@ -120,27 +116,22 @@ statistics = true
 bdist_base = build
 # Do not fix the interpreter path
 python = python3
+# NB: py3_dist and typelib_deps are defined in the spec
 requires =
 	python(abi) = %%{python3_version}
-	%%{_libdir}/girepository-1.0/cairo-1.0.typelib
-	%%{_libdir}/girepository-1.0/GLib-2.0.typelib
-	%%{_libdir}/girepository-1.0/DBus-1.0.typelib
-	%%{_libdir}/girepository-1.0/DBusGLib-1.0.typelib
-	%%{_libdir}/girepository-1.0/GObject-2.0.typelib
-	%%{_libdir}/girepository-1.0/Gdk-3.0.typelib
-	%%{_libdir}/girepository-1.0/GdkPixbuf-2.0.typelib
-	%%{_libdir}/girepository-1.0/Gio-2.0.typelib
-	%%{_libdir}/girepository-1.0/Gst-1.0.typelib
-	%%{_libdir}/girepository-1.0/GstPlayer-1.0.typelib
-	%%{_libdir}/girepository-1.0/Gtk-3.0.typelib
-	%%{_libdir}/girepository-1.0/Poppler-0.18.typelib
-	python3-watchdog
+	%%{!?typelib_deps:gtk3 gdk-pixbuf2 poppler-glib gobject-introspection}
+	%%{?typelib_deps:typelib(cairo) typelib(GLib) typelib(DBus) typelib(DBusGLib) typelib(GObject) typelib(Gdk) typelib(GdkPixbuf) typelib(Gio) typelib(Gtk) typelib(Poppler)}
+	%%{py3_dist watchdog}
+
 build-requires =
 	python3-devel
 	python3-setuptools
-	python3-Babel
+#	%%{py3_dist Babel}
+
 # Broken / inexistant options
 #icon = pympress/share/pixmaps/pympress.png
 #suggests =
-#	python3dist(python-vlc)
+#	%%{py3_dist python-vlc}
 #	vlc
+#	%%{?typelib_deps:typelib(Gst) typelib(GstPlayer)}
+#	%%{!?typelib_deps:gstreamer1 gstreamer1-plugins-bad-free}
