Update rpm build process for suggests/recommends

--- a/setup.cfg
+++ b/setup.cfg
@@ -121,17 +121,16 @@ requires =
 	python(abi) = %%{python3_version}
 	%%{!?typelib_deps:gtk3 gdk-pixbuf2 poppler-glib gobject-introspection}
 	%%{?typelib_deps:typelib(cairo) typelib(GLib) typelib(DBus) typelib(DBusGLib) typelib(GObject) typelib(Gdk) typelib(GdkPixbuf) typelib(Gio) typelib(Gtk) typelib(Poppler)}
-	%%{py3_dist watchdog}
-
+	%%{!?suse_version:python%%{python3_version}dist(pygobject)}
+	%%{!?mga_version:python3-gobject}
 build-requires =
 	python3-devel
 	python3-setuptools
-#	%%{py3_dist Babel}
-
-# Broken / inexistant options
-#icon = pympress/share/pixmaps/pympress.png
-#suggests =
-#	%%{py3_dist python-vlc}
-#	vlc
-#	%%{?typelib_deps:typelib(Gst) typelib(GstPlayer)}
-#	%%{!?typelib_deps:gstreamer1 gstreamer1-plugins-bad-free}
+	%%{py3_dist Babel}
+recommends =
+	%%{py3_dist watchdog}
+suggests =
+	(vlc and %%{py3_dist python-vlc}) or (
+	%%{?typelib_deps:typelib(Gst) and typelib(GstPlayer)}
+	%%{!?typelib_deps:gstreamer1 and gstreamer1-plugins-bad-free}
+	)
