--- a/.github/workflows/deploy_doc+l10n.yml
+++ b/.github/workflows/deploy_doc+l10n.yml
@@ -64,7 +64,7 @@ jobs:
       with:
         ref: gh-pages
     - name: Clean
-      run: find . -maxdepth 1 -not -name os-icons -exec echo rm -rf {} +
+      run: find . -maxdepth 1 -not -name os-icons -not -name resources -exec echo rm -rf {} +
     - name: Download
       uses: actions/download-artifact@v1
       with:
