Make python-vlc an optional dependency for pip
Use an “extras” dependency to specify the depdency. Should fix #155
after COPR rebuild.

--- a/setup.cfg
+++ b/setup.cfg
@@ -39,7 +39,6 @@ packages =
 	pympress.media_overlays
 python_requires = >=3
 install_requires =
-	python-vlc
 	watchdog
 	enum34;python_version<"3.4"
 setup_requires =
@@ -54,6 +53,8 @@ build_sphinx =
 babel =
 	babel
 	babelgladeextractor
+vlc_video =
+	python-vlc
 
 [options.package_data]
 pympress =
