Add Libreoffice mode of slide pages, called AFTER #171
Slides are the first half of the pdf pages.
Notes are the second half of the pdf pages.

Implement as a notes position, enable autodetection.

--- a/pympress/share/defaults.conf
+++ b/pympress/share/defaults.conf
@@ -85,6 +85,26 @@ notes = {
 	    "orientation": "horizontal"
 	}
 
+note_pages = {
+	    "resizeable": true,
+	    "children": [
+	        "notes",
+	        {
+	            "resizeable": false,
+	            "children": [
+	                "next",
+	                "annotations"
+	            ],
+	            "orientation": "vertical"
+	        }
+	    ],
+	    "proportions": [
+	        0.6,
+	        0.4
+	    ],
+	    "orientation": "horizontal"
+	}
+
 [notes position]
 horizontal = right
 vertical = bottom
