Use alpha-0 colors to erase previous scribbles

--- a/pympress/share/defaults.conf
+++ b/pympress/share/defaults.conf
@@ -155,4 +155,5 @@ unzoom = u
 validate = Return KP_Enter
 cancel = Escape
 undo_scribble = <ctrl>z
+redo_scribble = <ctrl>r
 toggle_pointermode = l
