Add eraser and scribble presets with markers icons #68

--- a/pympress/share/defaults.conf
+++ b/pympress/share/defaults.conf
@@ -113,8 +113,25 @@ vertical = bottom
 maxpages = 200
 
 [scribble]
-color = rgba(255,0,0,1.)
-width = 8
+color_1 = rgba(255,255,0,0.5)
+width_1 = 30
+color_2 = rgba(128,255,0,0.5)
+width_2 = 30
+color_3 = rgba(255,0,128,0.5)
+width_3 = 30
+color_4 = rgba(48,48,255,0.5)
+width_4 = 30
+color_5 = rgb(239,41,41)
+width_5 = 5
+color_6 = rgb(0,48,128)
+width_6 = 5
+color_7 = rgb(0,80,0)
+width_7 = 5
+color_8 = rgb(0,0,0)
+width_8 = 5
+color_9 = rgb(136,136,136)
+width_9 = 16
+active_pen = 1
 
 [gst]
 enabled = on
@@ -157,3 +174,13 @@ cancel = Escape
 undo_scribble = <ctrl>z
 redo_scribble = <ctrl>r
 toggle_pointermode = l
+scribble_preset_1 = 1
+scribble_preset_2 = 2
+scribble_preset_3 = 3
+scribble_preset_4 = 4
+scribble_preset_5 = 5
+scribble_preset_6 = 6
+scribble_preset_7 = 7
+scribble_preset_8 = 8
+scribble_preset_9 = 9
+scribble_preset_0 = 0
