Big Gio.Action rewrite

--- a/pympress/share/defaults.conf
+++ b/pympress/share/defaults.conf
@@ -144,43 +144,50 @@ init_options = --no-video-title-show,--no-xlib
 mime_types =
 
 [shortcuts]
+goto-page = g
+jumpto-label = j
 next = Right Down Page_Down space
+next-label = <ctrl>Right <ctrl>Down <ctrl>Page_Down <ctrl>space
 prev = Left Up Page_Up
-next_label = <ctrl>Right <ctrl>Down <ctrl>Page_Down <ctrl>space
-prev_label = <ctrl>Left <ctrl>Up <ctrl>Page_Up
-hist_back = BackSpace
-hist_forward = <ctrl>BackSpace
+prev-label = <ctrl>Left <ctrl>Up <ctrl>Page_Up
+hist-back = BackSpace
+hist-forward = <ctrl>BackSpace
 first = Home
 last = End
-fullscreen_content = F11 f F5 <ctrl>l
-fullscreen_presenter = <ctrl>f
-quit = q
-pause_timer = p Pause
-reset_timer = r
-blank_screen = b
-highlight = h
-notes_mode = n
-annotations = a
-swap_screens = s
-open_file = o
-close_file = <ctrl>w
-goto_page = g
-jumpto_label = j
-talk_time = t
-zoom = z
-unzoom = u
-validate = Return KP_Enter
-cancel = Escape
-undo_scribble = <ctrl>z
-redo_scribble = <ctrl>r
-toggle_pointermode = l
-scribble_preset_1 = 1
-scribble_preset_2 = 2
-scribble_preset_3 = 3
-scribble_preset_4 = 4
-scribble_preset_5 = 5
-scribble_preset_6 = 6
-scribble_preset_7 = 7
-scribble_preset_8 = 8
-scribble_preset_9 = 9
-scribble_preset_0 = 0
+
+pause-timer = p Pause
+reset-timer = r
+talk-time = t
+
+app.content-fullscreen = F11 f F5 <ctrl>l
+app.presenter-fullscreen = <ctrl>f
+app.zoom = z
+app.unzoom = u
+app.notes-mode = n
+app.annotations = a
+app.swap-screens = s
+app.blank-screen = b
+app.quit = q
+
+pointer.mode("toggle") = l
+
+validate-input = Return KP_Enter
+cancel-input = Escape
+
+file.close = <ctrl>w
+file.pick = o # prompt to open file
+
+
+highlight.toggle = h
+highlight.undo = <ctrl>z
+highlight.redo = <ctrl>r
+highlight.use-pen("1") = 1
+highlight.use-pen("2") = 2
+highlight.use-pen("3") = 3
+highlight.use-pen("4") = 4
+highlight.use-pen("5") = 5
+highlight.use-pen("6") = 6
+highlight.use-pen("7") = 7
+highlight.use-pen("8") = 8
+highlight.use-pen("9") = 9
+highlight.use-pen("eraser") = 0
