Refactor initial size and moving of windows
Now pymrpess will remember position and size of windows and try its best
to restore them. We also try on double screens if content fulscreen is
asked at startup  to move the content window to the right minitor, if
not done already.

--- a/pympress/share/defaults.conf
+++ b/pympress/share/defaults.conf
@@ -1,13 +1,13 @@
 [content]
 xalign = 0.5
 yalign = 0.5
-monitor = 0
+geometry = 800x600
 start_blanked = off
 start_fullscreen = on
 white_blanking = off
 
 [presenter]
-monitor = 1
+geometry = 800x600
 start_fullscreen = off
 pointer = red
 pointer_mode = manual
