--- a/pympress/share/defaults.conf
+++ b/pympress/share/defaults.conf
@@ -146,14 +146,14 @@ mime_types =
 [shortcuts]
 goto-page = g
 jumpto-label = j
-next = Right Down Page_Down space
+next-page = Right Down Page_Down space
 next-label = <ctrl>Right <ctrl>Down <ctrl>Page_Down <ctrl>space
-prev = Left Up Page_Up
+prev-page = Left Up Page_Up
 prev-label = <ctrl>Left <ctrl>Up <ctrl>Page_Up
 hist-back = BackSpace
 hist-forward = <ctrl>BackSpace
-first = Home
-last = End
+first-page = Home
+last-page = End
 
 pause-timer = p Pause
 reset-timer = r
@@ -175,7 +175,8 @@ validate-input = Return KP_Enter
 cancel-input = Escape
 
 file.close = <ctrl>w
-file.pick = o # prompt to open file
+# prompt to open file
+file.pick = o
 
 
 highlight.toggle = h
