Fix timer actions

--- a/pympress/share/defaults.conf
+++ b/pympress/share/defaults.conf
@@ -155,9 +155,9 @@ hist-forward = <ctrl>BackSpace
 first-page = Home
 last-page = End
 
-pause-timer = p Pause
-reset-timer = r
-talk-time = t
+timer.pause = p Pause
+timer.reset = r
+timer.set-duration = t
 
 app.content-fullscreen = F11 f F5 <ctrl>l
 app.presenter-fullscreen = <ctrl>f
