Move page management to UI

--- a/pympress/share/defaults.conf
+++ b/pympress/share/defaults.conf
@@ -165,6 +165,7 @@ app.zoom = z
 app.unzoom = u
 app.notes-mode = n
 app.annotations = a
+app.highlight = h
 app.swap-screens = s
 app.blank-screen = b
 app.quit = q
@@ -179,7 +180,6 @@ file.close = <ctrl>w
 file.pick = o
 
 
-highlight.toggle = h
 highlight.undo = <ctrl>z
 highlight.redo = <ctrl>r
 highlight.use-pen("1") = 1
