Fix flake8 complaints

--- a/pympress/share/defaults.conf
+++ b/pympress/share/defaults.conf
@@ -144,20 +144,16 @@ init_options = --no-video-title-show,--no-xlib
 mime_types =
 
 [shortcuts]
-goto-page = g
-jumpto-label = j
-next-page = Right Down Page_Down space
-next-label = <ctrl>Right <ctrl>Down <ctrl>Page_Down <ctrl>space
-prev-page = Left Up Page_Up
-prev-label = <ctrl>Left <ctrl>Up <ctrl>Page_Up
-hist-back = BackSpace
-hist-forward = <ctrl>BackSpace
-first-page = Home
-last-page = End
-
-timer.pause = p Pause
-timer.reset = r
-timer.set-duration = t
+page.goto-page = g
+page.jumpto-label = j
+page.next = Right Down Page_Down space
+page.next-label = <ctrl>Right <ctrl>Down <ctrl>Page_Down <ctrl>space
+page.prev = Left Up Page_Up
+page.prev-label = <ctrl>Left <ctrl>Up <ctrl>Page_Up
+page.hist-back = BackSpace
+page.hist-forward = <ctrl>BackSpace
+page.first = Home
+page.last = End
 
 app.content-fullscreen = F11 f F5 <ctrl>l
 app.presenter-fullscreen = <ctrl>f
@@ -170,14 +166,17 @@ app.swap-screens = s
 app.blank-screen = b
 app.quit = q
 
-pointer.mode("toggle") = l
+app.validate-input = Return KP_Enter
+app.cancel-input = Escape
 
-validate-input = Return KP_Enter
-cancel-input = Escape
-
-file.close = <ctrl>w
 # prompt to open file
 file.pick = o
+file.close = <ctrl>w
+
+pointer.mode("toggle") = l
+timer.pause = p Pause
+timer.reset = r
+timer.set-duration = t
 
 
 highlight.undo = <ctrl>z
