--- a/setup.cfg
+++ b/setup.cfg
@@ -94,6 +94,7 @@ ignore = D107, D200, D210, D413, E251, E302, E303, W504,  # never complain about
 per-file-ignores =
 	# do not complain about dummy functions
 	pympress/media_overlays/gif_backend.py: D102, E704
+	pympress/__main__.py: F401
 
 [build_sphinx]
 source-dir = docs
