Use single scope for actions

--- a/pympress/share/defaults.conf
+++ b/pympress/share/defaults.conf
@@ -144,50 +144,52 @@ init_options = --no-video-title-show,--no-xlib
 mime_types =
 
 [shortcuts]
-page.goto-page = g
-page.jumpto-label = j
-page.next = Right Down Page_Down space
-page.next-label = <ctrl>Right <ctrl>Down <ctrl>Page_Down <ctrl>space
-page.prev = Left Up Page_Up
-page.prev-label = <ctrl>Left <ctrl>Up <ctrl>Page_Up
-page.hist-back = BackSpace
-page.hist-forward = <ctrl>BackSpace
-page.first = Home
-page.last = End
+next-page = Right Down Page_Down space
+prev-page = Left Up Page_Up
+first-page = Home
+last-page = End
+next-label = <ctrl>Right <ctrl>Down <ctrl>Page_Down <ctrl>space
+prev-label = <ctrl>Left <ctrl>Up <ctrl>Page_Up
+hist-back = BackSpace
+hist-forward = <ctrl>BackSpace
+goto-page = g
+jumpto-label = j
 
-app.content-fullscreen = F11 f F5 <ctrl>l
-app.presenter-fullscreen = <ctrl>f
-app.zoom = z
-app.unzoom = u
-app.notes-mode = n
-app.annotations = a
-app.highlight = h
-app.swap-screens = s
-app.blank-screen = b
-app.quit = q
+content-fullscreen = F11 f F5 <ctrl>l
+presenter-fullscreen = <ctrl>f
+zoom = z
+unzoom = u
+notes-mode = n
+annotations = a
+highlight = h
+swap-screens = s
+blank-screen = b
+quit = q
 
-app.validate-input = Return KP_Enter
-app.cancel-input = Escape
+validate-input = Return KP_Enter
+cancel-input = Escape
 
 # prompt to open file
-file.pick = o
-file.close = <ctrl>w
+pick-file = o
+close-file = <ctrl>w
 
-pointer.mode("toggle") = l
-timer.pause = p Pause
-timer.reset = r
-timer.set-duration = t
+pointer-mode("toggle") = l
+pause-timer = p Pause
+reset-timer = r
+set-talk-time = t
+timing-report =
 
 
-highlight.undo = <ctrl>z
-highlight.redo = <ctrl>r
-highlight.use-pen("1") = 1
-highlight.use-pen("2") = 2
-highlight.use-pen("3") = 3
-highlight.use-pen("4") = 4
-highlight.use-pen("5") = 5
-highlight.use-pen("6") = 6
-highlight.use-pen("7") = 7
-highlight.use-pen("8") = 8
-highlight.use-pen("9") = 9
-highlight.use-pen("eraser") = 0
+highlight-undo = <ctrl>z
+highlight-redo = <ctrl>r
+highlight-use-pen("1") = 1
+highlight-use-pen("2") = 2
+highlight-use-pen("3") = 3
+highlight-use-pen("4") = 4
+highlight-use-pen("5") = 5
+highlight-use-pen("6") = 6
+highlight-use-pen("7") = 7
+highlight-use-pen("8") = 8
+highlight-use-pen("9") = 9
+highlight-use-pen("eraser") = 0
+highlight-clear =
