Pass existing command line to Gio.action system

--- a/pympress/share/defaults.conf
+++ b/pympress/share/defaults.conf
@@ -176,7 +176,7 @@ close-file = <ctrl>w
 pointer-mode("toggle") = l
 pause-timer = p Pause
 reset-timer = r
-set-talk-time = t
+edit-talk-time = t
 timing-report =
 
 
