Guard accessing Gdk.window better
Due to new sequence of events (from Gtk.App), handling options may
happen before ::activate, i.e. before windows are realized.

--- a/pympress/share/defaults.conf
+++ b/pympress/share/defaults.conf
@@ -150,8 +150,8 @@ first-page = Home
 last-page = End
 next-label = <ctrl>Right <ctrl>Down <ctrl>Page_Down <ctrl>space
 prev-label = <ctrl>Left <ctrl>Up <ctrl>Page_Up
-hist-back = BackSpace
-hist-forward = <ctrl>BackSpace
+hist-back = <alt>Left
+hist-forward = <alt>Right
 goto-page = g
 jumpto-label = j
 
