Properly setup migration of shortcuts

--- a/pympress/share/defaults.conf
+++ b/pympress/share/defaults.conf
@@ -173,7 +173,7 @@ cancel-input = Escape
 pick-file = o
 close-file = <ctrl>w
 
-pointer-mode("toggle") = l
+pointer-mode::toggle = l
 pause-timer = p Pause
 reset-timer = r
 edit-talk-time = t
@@ -182,14 +182,14 @@ timing-report =
 
 highlight-undo = <ctrl>z
 highlight-redo = <ctrl>r
-highlight-use-pen("1") = 1
-highlight-use-pen("2") = 2
-highlight-use-pen("3") = 3
-highlight-use-pen("4") = 4
-highlight-use-pen("5") = 5
-highlight-use-pen("6") = 6
-highlight-use-pen("7") = 7
-highlight-use-pen("8") = 8
-highlight-use-pen("9") = 9
-highlight-use-pen("eraser") = 0
+highlight-use-pen::1 = 1
+highlight-use-pen::2 = 2
+highlight-use-pen::3 = 3
+highlight-use-pen::4 = 4
+highlight-use-pen::5 = 5
+highlight-use-pen::6 = 6
+highlight-use-pen::7 = 7
+highlight-use-pen::8 = 8
+highlight-use-pen::9 = 9
+highlight-use-pen::eraser = 0
 highlight-clear =
