--- a/appveyor.yml
+++ b/appveyor.yml
@@ -16,8 +16,11 @@ environment:
   - arch: i686
     mingw: mingw32
 
+init:
+- cmd: C:\msys64\usr\bin\bash -lc "pacman --noconfirm -Syuu"
+- cmd: C:\msys64\usr\bin\bash -lc "pacman --noconfirm -Syuu"
+
 build_script:
-- cmd: C:\msys64\msys2_shell.cmd -%mingw% -defterm -here -no-start -c "pacman -Syu --noprogressbar --noconfirm"
 - cmd: C:\msys64\msys2_shell.cmd -%mingw% -defterm -here -no-start scripts\build_msi_mingw.sh
 
 test_script:
