--- a/setup.cfg
+++ b/setup.cfg
@@ -2,7 +2,7 @@
 name = pympress
 version = attr: pympress.__version__
 keywords = pdf-viewer, beamer, presenter, slide, projector, pdf-reader, presentation, python, poppler, gtk, pygi, vlc
-description = A simple and powerful dual-screen PDF reader designed for presentations.
+description = A simple and powerful dual-screen PDF reader designed for presentations
 long_description = file: README.md
 long_description_content_type = text/markdown
 author = Cimbali, Thomas Jost, Christof Rath, Epithumia
@@ -130,6 +130,7 @@ build-requires =
 	python3-devel
 	python3-setuptools
 	%%{py3_dist Babel}
+	findutils
 recommends =
 	%%{py3_dist watchdog}
 suggests =
