Remember shipping the menu bar XML file

--- a/setup.cfg
+++ b/setup.cfg
@@ -60,6 +60,7 @@ vlc_video =
 pympress =
 	share/defaults.conf
 	share/xml/*.glade
+	share/xml/*.xml
 	share/css/*.css
 	share/pixmaps/*.png
 	share/locale/*/LC_MESSAGES/pympress.mo
