Rename scribble to highlight in config
Both names were used which was a little confusing

--- a/pympress/share/defaults.conf
+++ b/pympress/share/defaults.conf
@@ -112,7 +112,7 @@ vertical = bottom
 [cache]
 maxpages = 200
 
-[scribble]
+[highlight]
 color_1 = rgba(255,255,0,0.5)
 width_1 = 90
 color_2 = rgba(128,255,0,0.5)
