Toggleable highlight tools orientation

--- a/pympress/share/defaults.conf
+++ b/pympress/share/defaults.conf
@@ -41,6 +41,7 @@ plain = {
 	    "orientation": "horizontal"
 	}
 
+highlight_tools = vertical
 highlight = {
 	    "resizeable": true,
 	    "orientation": "horizontal",
