Track new file with babel too

--- a/pympress/share/locale/babel_mapping.cfg
+++ b/pympress/share/locale/babel_mapping.cfg
@@ -2,6 +2,10 @@
 keywords = _
 charset = utf-8
 
+[glade: **.xml]
+keywords = translatable
+charset = utf-8
+
 [glade: **.glade]
 keywords = translatable
 charset = utf-8
