--- a/setup.cfg
+++ b/setup.cfg
@@ -13,7 +13,7 @@ project_urls =
 	Issues = https://github.com/Cimbali/pympress/issues/
 	Documentation = https://cimbali.github.io/pympress/
 	Source Code = https://github.com/Cimbali/pympress/
-license = GPLv2
+license = GPLv2+
 classifiers =
 	Development Status :: 5 - Production/Stable
 	Environment :: X11 Applications :: GTK
