Use our own version of the recipe for tests
Otherwise “brew test” might fail on recipes

--- a/.github/workflows/push_linter.yml
+++ b/.github/workflows/push_linter.yml
@@ -44,7 +44,7 @@ jobs:
     steps:
     - name: Install latest
       run: |
-        brew install pympress --HEAD
+        brew install Cimbali/homebrew-core/pympress.rb --HEAD
 
     - name: Test
       run: |
