Generate mo files before uploading to pypi
We didn’t upload po files, so no translations were shipped through PyPI.
Now uploading requires runs compile_catalog first, which requires Babel
or gettext. Anything based off PyPI will have the translated files.

Other build systems (downloading e.g. from github) might need to be
adjusted slightly. Microsoft builds already run compile_catalog.

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -27,6 +27,7 @@ jobs:
         TWINE_USERNAME: __token__
         TWINE_PASSWORD: ${{ secrets.PYPI_API_TOKEN }}
       run: |
+        python setup.py compile_catalog
         python setup.py sdist bdist_wheel
         twine upload dist/*
 
