Correct brew install, cleanup setup.py

--- a/.github/workflows/push_linter.yml
+++ b/.github/workflows/push_linter.yml
@@ -44,7 +44,7 @@ jobs:
     steps:
     - name: Install latest
       run: |
-        brew install Cimbali/homebrew-core/pympress.rb --HEAD
+        brew install Cimbali/core/pympress --HEAD
 
     - name: Test
       run: |
