Use standard bdist_rpm options

--- a/setup.cfg
+++ b/setup.cfg
@@ -116,6 +116,9 @@ statistics = true
 
 [bdist_rpm]
 bdist_base = build
+license = LICENSE.txt
+install_script = scripts/rpm_install
+build_script = scripts/rpm_build
 # Do not fix the interpreter path
 python = python3
 # NB: py3_dist and typelib_deps are defined in the spec
@@ -129,6 +132,7 @@ build-requires =
 	python3-devel
 	python3-setuptools
 	findutils
+	gettext
 recommends =
 	%%{py3_dist watchdog}
 suggests =
