Add some cleanup instructions in RPM install
Previous versions left directories behind.  Fixes #162

--- a/setup.cfg
+++ b/setup.cfg
@@ -120,6 +120,7 @@ bdist_base = build
 license = LICENSE.txt
 install_script = scripts/rpm_install
 build_script = scripts/rpm_build
+post_install = scripts/rpm_post_install
 # Do not fix the interpreter path
 python = python3
 # NB: py3_dist and typelib_deps are defined in the spec
