Automatically trigger updates to COPR for RPMs
Also include license file in source dist for correct rpm building

--- a/.github/workflows/build_binary.yml
+++ b/.github/workflows/build_binary.yml
@@ -34,6 +34,16 @@ jobs:
         GHR_PATH: srpm/
         GITHUB_TOKEN: ${{ secrets.GITHUB_PERSONAL_ACCESS_TOKEN }}
 
+    - name: Upload to COPR
+      continue-on-error: true
+      run: |
+        trap 'rm -f ./copr-config' EXIT && echo "$COPR_TOKEN_CONFIG" > ./copr-config
+
+        python3 -m pip install copr-cli
+        copr-cli --config ./copr-config build --nowait cimbali/pympress sprm/python3-pympress-*.src.rpm
+      env:
+        COPR_TOKEN_CONFIG: ${{ secrets.COPR_TOKEN_CONFIG }}
+
 
   windows-build:
     name: Windows Binaries
