--- a/setup.cfg
+++ b/setup.cfg
@@ -14,6 +14,7 @@ project_urls =
 	Documentation = https://cimbali.github.io/pympress/
 	Source Code = https://github.com/Cimbali/pympress/
 license = GPL-2.0-or-later
+license_files = LICENSE.txt
 classifiers =
 	Development Status :: 5 - Production/Stable
 	Environment :: X11 Applications :: GTK
