--- a/.github/workflows/build_binary.yml
+++ b/.github/workflows/build_binary.yml
@@ -1,6 +1,6 @@
-name: Build source RPM
+name: Build binaries
 
-on: create
+on: [create, workflow_dispatch]
 
 jobs:
   srpm:
@@ -36,6 +36,7 @@ jobs:
 
     - name: Upload to COPR
       continue-on-error: true
+      if: startsWith(github.ref, 'refs/tags/')
       run: |
         trap 'rm -f ./copr-config' EXIT && echo "$COPR_TOKEN_CONFIG" > ./copr-config
 
@@ -43,6 +44,12 @@ jobs:
         copr-cli --config ./copr-config build --nowait cimbali/pympress sprm/python3-pympress-*.src.rpm
       env:
         COPR_TOKEN_CONFIG: ${{ secrets.COPR_TOKEN_CONFIG }}
+
+    - name: Upload Artifact
+      uses: actions/upload-artifact@v2
+      if: "! startsWith(github.ref, 'refs/tags/')"
+      with:
+        path: dist/*
 
 
   windows-build:
@@ -142,3 +149,9 @@ jobs:
         env:
           GHR_PATH: dist/
           GITHUB_TOKEN: ${{ secrets.GITHUB_PERSONAL_ACCESS_TOKEN }}
+
+      - name: Upload Artifact
+        uses: actions/upload-artifact@v2
+        if: "! startsWith(github.ref, 'refs/tags/')"
+        with:
+          path: dist/*
