--- a/.github/workflows/push_linter.yml
+++ b/.github/workflows/push_linter.yml
@@ -8,7 +8,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [3.5, 3.6, 3.7, 3.8]
+        python-version: [3.5, 3.6, 3.7, 3.8, 3.9]
 
     steps:
     - uses: actions/checkout@v1
@@ -28,12 +28,12 @@ jobs:
         flake8 . --count --show-source --statistics --select=E,F,W,C
 
     - name: Lint docstrings dependencies
-      if: matrix.python-version == 3.8
+      if: matrix.python-version == 3.9
       run: |
-        python -m pip install flake8-docstrings
+        python -m pip install flake8-docstrings | sed -r 'h;s/^(\S+):([0-9]+):([0-9]+): /::error file=\1,line=\2,col=\3::/p;g'
 
     - name: Lint docstrings
-      if: matrix.python-version == 3.8
+      if: matrix.python-version == 3.9
       run: |
         # Full list of ignores, fail on errors. No Docs errors.
-        flake8 . --count --show-source --statistics --select=D
+        flake8 . --count --show-source --statistics --select=D | sed -r 'h;s/^(\S+):([0-9]+):([0-9]+): /::warning file=\1,line=\2,col=\3::/p;g'
